# BuildingApplicationsWithAIAgents

./: .gitignore  LEARNING_PLAN.md  README.md  START_HERE.md  langgraph.json  pyproject.toml  requirements.txt  test_agent.py
docs/: langsmith-studio.md  mcp-apps-weather.md
docs/brainstorms/: 2026-04-09-agent-run-explorer-requirements.md  2026-04-09-chat-first-run-explorer-ui-requirements.md
docs/ideation/: 2026-04-11-langchain-learning-improvements-ideation.md
docs/plans/: 2026-04-09-001-feat-agent-run-explorer-frontend-plan.md  2026-04-09-002-feat-chat-first-run-explorer-ui-plan.md  2026-04-10-001-refactor-replace-run-explorer-with-langsmith-studio-plan.md  2026-04-11-001-refactor-studio-first-learning-plan-plan.md
docs/solutions/integration-issues/: langsmith-studio-package-metadata-20260411.md  mcp-weather-widget-tool-separation.md  stdout-json-contamination-run-explorer-20260409.md
docs/solutions/logic-errors/: studio-first-learning-plan-20260411.md
frontend/: README.md  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/components/: ChatRunStep.vue  LauncherPanel.vue  ObservabilityPanel.vue  RecentRunsPanel.vue  RunDetailTabs.vue  RunSummary.vue  StatusPill.vue  TimelineEventCard.vue  ToolEvidenceCard.vue
frontend/app/pages/: index.vue  (+1 more)
frontend/mcp-apps/: get_weather_data.mjs  weather-app-server.mjs  weather-mock-data.json  weather-widget.html
frontend/shared/: mcp-sandbox.ts  run-types.ts
frontend/tests/: launcher-panel.spec.ts  run-chat.spec.ts  run-detail-tabs.spec.ts
tests/frontend/: test_run_explorer.py
tests/observability/: test_loki_logger.py
todos/: 001-complete-p2-portable-doc-links.md  002-complete-p2-studio-dependency-metadata.md
(+49 files in other folders)
