[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
dependencies = [
    "typing_extensions>=4.10",
    "openai>=1.25",
    "tiktoken>=0.5.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=1.1.2",
    "bert-score",
    "sentence-transformers",
    "torch",
    "vectordb"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
