[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
dependencies = [
    "typing_extensions>=4.10",
    "openai>=1.25",
    "tiktoken>=0.5.1",
    "python-dotenv>=1.0",
    "langchain==0.1.20",
    "langchain-openai==0.1.4",
    "langgraph==0.0.28"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
